# spot_arm_ws

./: readme.md  readme.me
arm_moveit_config/: .setup_assistant  package.xml
arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  spot.ros2_control.xacro  spot.srdf
arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
manipulation_scripts/: CMakeLists.txt  package.xml
manipulation_scripts/launch/: move_2_pose.launch.py  move_test.launch.py
manipulation_scripts/src/: move_2_pose.cpp  move_test.cpp
move_arm/: CMakeLists.txt  package.xml
move_arm/src/: chip_socket_task.cpp  move_arm.cpp  move_arm_class.cpp  move_arm_service.cpp  test.cpp  test_move.cpp
moveit2/moveit_configs_utils/moveit_configs_utils/: launches.py
moveit2/moveit_planners/test_configs/prbt_moveit_config/launch/: demo.launch.py
moveit2/moveit_ros/planning/planning_scene_monitor/src/: planning_scene_monitor.cpp
mtc_spot_arm/: CMakeLists.txt
mtc_spot_arm/launch/: mtc_trial.launch.py
spot_arm_gazebo/: CMakeLists.txt  package.xml
spot_arm_gazebo/config/: arm_controller.yaml  cl_controller.yaml  grip_controller.yaml  hand_controller.yaml  ros2_controllers.yaml  spot_arm_controllers.yaml
spot_arm_gazebo/launch/: gazebo.launch.py  gazebo_socket.launch.py  main.launch.py  spawn_robot_ros2.launch.xml  spawn_spot_description.launch.py  spot_arm_gazebo.launch.py  start_world.launch.py  start_world.launch.xml  test.launch.py
spot_arm_gazebo/models/12gen/: model.config  model.sdf
spot_arm_gazebo/worlds/: spot_empty.world
spot_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
spot_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  spot.ros2_control.xacro  spot.srdf  spot.urdf.xacro
spot_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
spot_description/: CMakeLists.txt
spot_description/launch/: description.launch.py  urdf_visualize.launch.py
spot_description/meshes/arm/collision/: base_grip.stl  left_finger.stl  left_finger_2.stl  right_finger.stl  right_finger_2.stl  right_finger_3.stl  right_finger_4.stl
spot_description/meshes/arm/visual/: left_finger_3.stl  left_finger_4.stl
spot_description/rviz/: sensors.rviz  viz_spot2.rviz  zero_arm_pos.yamel
spot_description/urdf/: spot.urdf  spot2.urdf  spot2.urdf.xacro  spot_control.urdf.xacro  spot_control_gazebo.urdf.xacro  spot_macro.xacro  spot_macro2.xacro  spot_macro_control.xacro  spot_macro_control_t.xacro
spot_description/world/: Lab.world  Lab1.world  Lab2.world  Lab3.world
test_bench_description/: CMakeLists.txt  package.xml
test_bench_description/launch/: description.launch.py  urdf_visualize.launch.py
test_bench_description/meshes/: Base.dae  Base.stl  PressureBar.stl  cover.stl  cover2.stl  pcb.stl  solid1.stl  solid15.stl  solid16.stl  solid17.stl  solid2.stl  solid3.stl  solid4.stl  solid5.stl  solid6_7_8.stl  solid9_14.stl  surface.stl
test_bench_description/meshes/OLD/: 1700Socket.stl  BackPlane.stl  CPU-FlatCover.stl  CPU-FlatCover2.stl  PCB.stl  PressureBar.stl  PressureBar2.stl
test_bench_description/rviz/: urdf_vis.rviz
test_bench_description/urdf/: Socket.urdf  test_bench.urdf
websoc_com/: package.xml  setup.cfg  setup.py
websoc_com/websoc_com/: web_com.py
workspace_estimation/: package.xml  setup.cfg  setup.py
workspace_estimation/workspace_estimation/: ws_est.py
yolo/: package.xml  setup.py
yolo/yolo/: image_saver.py
yolov8_msgs/: CMakeLists.txt  package.xml
yolov8_msgs/msg/: Chip.msg  Poseinference.msg  Poseresults.msg  Socket.msg  Ws.msg
yolov8_msgs/srv/: Move.srv
